Role extensions
Adds support for more expressive roles.
- Support using any fieldname, not just group or topic
- Support for multiple role-files

Add only once validation for special_topics